# doubleidle

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: client.rs  main.rs  server.rs
