[package]
name = "doubleidle"
version = "0.2.0"
edition = "2021"

[features]
default = ["zeroconf"]
zeroconf = ["dep:zeroconf-tokio"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
system-idle-time = "1.0"
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
ashpd = "0.12"
zeroconf-tokio = { version = "0.3.0", optional = true }
dirs = "5.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[patch.crates-io]
zeroconf-tokio = { path = "vendor/zeroconf-tokio" }
