[package]
name = "doubleidle"
description = "Keep a machine from suspending while another machine is active"
version = "0.3.0"
edition = "2021"
homepage = "https://github.com/whot/doubleidle"
repository = "https://github.com/whot/doubleidle"
license = "GPLv3-or-later"

[features]
default = ["zeroconf"]
zeroconf = ["dep:zeroconf-tokio"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
system-idle-time = "1.0"
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
ashpd = "0.12"
zeroconf-tokio = { version = "0.3.1", optional = true }
dirs = "5.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
